integration working, issue with sender. currently assuming is sending from tab rather than extension or pop-up

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,15 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Extension with Buttons</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="fontawesome" href="all.css">
-  <style>
-      .download::before {
-      content: "\f019"; /* Unicode for the download symbol */
-      font-family: "Font Awesome 5 Free"; /* Font Awesome font family */
-      font-weight: 900;
-      font-size: larger;
-    }
-  </style>
 </head>
 <body>
   <h1>melody &#x1F3A7</h1>
@@ -25,6 +16,6 @@
     <!-- The download button -->
     <button id="download" class="button">&#x2193</button>
   </div>
-  <script src="contentScript.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
